# stable_node_control

./: .gitignore  Part_1_NODE.ipynb  README.md  Untitled.ipynb  benchmark.py  benchmark.sbatch  example.ipynb  example_with_control.ipynb  full_gd_lr_01_epoch_100_scaled_data.pt  hysteresis.ipynb  hysteresis2.ipynb  kernels.py  launch_decay_jobs.sbatch  learn_f_g.ipynb  mwe.ipynb  nueromancer.ipynb  playground.ipynb  pyproject.toml  sequential_decay_models.py  slurm-9731367.out  test.ipynb.44d1fb33-5769-42aa-8ea4-e23dddb31f1b  train_budworm.py  train_dense_k.py  train_dense_k.sbatch  train_mixing_tanks.py  train_mixing_tanks.sbatch  train_model.py  train_model.sbatch  train_multi_k.py  train_multi_k.sbatch
data/: budworm.py  hysteresis.py  tanks.py  utils.py
example/: Readme.txt  hello.py  hello_world.sbatch  slurm-9403097.out
model_weights/: full_gd_lr_01_epoch_10.pt  full_gd_lr_01_epoch_10_scaled_data.pt  full_gd_lr_01_epoch_200_scaled_data.pt
notebooks/: contraction.ipynb  f_and_g_networks.ipynb  hysteresis.ipynb  hysteresis2.ipynb  hysteresis2_OLD.ipynb  mini_batches.ipynb
results/: losses_analysis.ipynb  seed_1234_sample_rate_10_lr_0.01_n_epochs_100_hidden_dim_2.pt  test_model.pt  test_model_log.pkl
scratch/: contraction.ipynb  example_with_control.ipynb  hysteresis.ipynb  hysteresis2.ipynb  learn_f_g.ipynb
slurm_output/: .output-9506321.out.swp  .slurm-9529589.out.swp  job_chain_summary.txt  output-9505662.out  output-9506321.out  output-9510056.out  output-9522239.out  output-9525319.out  output-9529589.out  output-9531626.out  output-9532347.out  (+46 more)
(+170 files in other folders)
