[project]
name = "stabnode"
version = "0.1.0"
description = "Stability enforced Neural ODE models"

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy<2.0",
    "scikit-learn",
    "matplotlib",
    "torchdiffeq",
    "tqdm"
]

[tool.setuptools]
packages = [
    "stabnode",
    "data",
]

[project.urls]
Homepage = "https://github.com/MalachiteWind/stable_node_control"
Repository = "https://github.com/MalachiteWind/stable_node_control"
